src/test/ui/issues/issue-75907.stderr
error[E0532]: expected tuple struct or tuple variant, found struct `Bar`
  --> $DIR/issue-75907.rs:15:9
   |
LL |     let Bar(x, y, Foo(z)) = make_bar();
   |         ^^^ not a tuple struct or tuple variant

error[E0532]: expected tuple struct or tuple variant, found struct `Foo`
  --> $DIR/issue-75907.rs:15:19
   |
LL |     let Bar(x, y, Foo(z)) = make_bar();
   |                   ^^^ not a tuple struct or tuple variant

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0532`.
